<resources>
    <string name="app_name">AnimalVilla</string>
    <string name="button">Button</string>
    <string name="start">Start</string>
    <string name="animal_villa">Animal Villa</string>
    <string name="stuff" />
    <string name="leftOption" />
    <string name="rightOption" />
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="repeat_password">Repeat password</string>
    <string name="nextday">nextDay</string>
</resources>